# voice-eval-lab

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.backend.yml  docker-compose.notes.yml  fly.toml  pyproject.toml
.github/workflows/: ci.yml  docker.yml
docs/: ARCHITECTURE.md  RESUME_BULLETS.md  TROUBLESHOOTING.md
docs/adr/: ADR-001-mock-first-pipeline.md  ADR-002-jiwer-for-wer.md  ADR-003-binary-vs-latency-barge-in.md
evals/: INTERPRETATION.md  REPORT.ft-test.md  REPORT.html  REPORT.md  REPORT.with-wer-injection.md  calibration.csv  notes_fixtures.json  scores.json  thresholds.json
scripts/: deploy.sh
src/voice_eval_lab/: __init__.py  baseline.py  cli.py  models.py  pipeline.py
src/voice_eval_lab/adapters/: __init__.py  cartesia.py  deepgram.py  elevenlabs.py  groq.py  whisper.py
src/voice_eval_lab/audio/: __init__.py  filesystem.py  protocol.py  synthesizer.py
src/voice_eval_lab/backend/: __init__.py  app.py  auth.py  models.py  store.py
src/voice_eval_lab/backend/static/: app.js  index.html  styles.css
src/voice_eval_lab/eval/: __init__.py  golden.py  metrics.py
src/voice_eval_lab/judge/: __init__.py  calibration.py  factory.py  llm.py  protocol.py  substring.py
src/voice_eval_lab/notes/: __init__.py  factory.py  llm_adapter.py  memory.py  pgvector.py  protocol.py
src/voice_eval_lab/observability/: __init__.py  phoenix.py
src/voice_eval_lab/pipecat/: __init__.py  livekit.py  pipeline.py  processors.py  turn_detector.py
tests/: conftest.py  test_adapters.py  test_audio.py  test_baseline.py  test_cli.py  test_deploy.py  test_elevenlabs_adapter.py  test_golden_set.py  test_groq_role_and_phoenix.py  test_judge.py  test_metrics.py  test_metrics_edges.py  test_metrics_extras.py  test_notes.py  test_pipeline.py  test_pipeline_extras.py  test_real_adapter_integration.py  test_render.py  test_whisper_adapter.py
tests/mock_servers/: __init__.py  app.py
tests/test_backend/: test_api.py  test_frontend.py  test_store.py
tests/test_pipecat/: test_livekit.py  test_pipeline.py  test_processors.py  test_turn_detector.py
