[project]
name = "voice-eval-lab"
version = "0.1.0"
description = "Eval harness + reference pipeline for real-time voice agents: 9 metrics covering turn latency, WER, faithfulness, barge-in success/yield, false-trigger rate, TTS jitter, endpointing accuracy, and LLM decisiveness."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Bishara Mekhaeil" }]
keywords = ["voice", "agents", "eval", "wer", "phoenix", "livekit", "pipecat"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "numpy>=1.26,<3",
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
    "jiwer>=3.0",  # word-error-rate calculator
    "matplotlib>=3.8",
]

[project.urls]
Homepage = "https://github.com/BishBish123/voice-eval-lab"
Repository = "https://github.com/BishBish123/voice-eval-lab"

[project.scripts]
voice-eval = "voice_eval_lab.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voice_eval_lab"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "PL", "RUF", "ASYNC", "S"]
ignore = ["PLR0913", "PLR2004", "E501", "S101", "S603", "S607"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101", "ASYNC"]
"src/voice_eval_lab/cli.py" = ["B008", "ASYNC240"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
ignore_missing_imports = true
disallow_untyped_decorators = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["-ra", "--strict-markers", "--strict-config", "--showlocals"]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests requiring real STT/LLM/TTS services",
    "slow: tests > ~1s",
]
filterwarnings = ["error", "ignore::DeprecationWarning"]
